--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,18 @@ services:
       - mysql-server
     networks:
       app_net: 
+      
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: app_phpmyadmin
+    restart: always
+    ports:
+      - 8080:80
+    environment:
+      PMA_HOST: mysql-server
+      PHP_UPLOAD_MAX_FILESIZE: 67108864
+    networks:
+      app_net:
     
 networks:
   app_net:
