Change mysql image for rpi

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   mysql-server:
     image: mysql:5.7
     # for rpi
-    #image: hypriot/rpi-mysql
+    #image: nidorpi/rpi-mysql5.7
     environment:
       MYSQL_DATABASE: ${DATABASE_NAME}
       MYSQL_ROOT_PASSWORD: ${DATABASE_ROOT_PASSWORD}
