--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
 #      MYSQL_USER: myweb
 #      MYSQL_PASSWORD: secret
     restart: always
-    ports:
-      - 3306:3306
+#    ports:
+#      - 3306:3306
     volumes:
       - ./docker/mysql/data:/var/lib/mysql
     networks:
