phpmyadmin for raspberry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       app_net: 
       
   phpmyadmin:
+    ## image: ebspace/armhf-phpmyadmin   For raspberry
     image: phpmyadmin/phpmyadmin
     container_name: app_phpmyadmin
     restart: always
